compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_error_invalid_storage_ty_any_str.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const _ : string(*)"

---
"_"@(FileId(1), 6..7) [Declared]: string_n Any
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 10..19: invalid storage type
| error in file FileId(1) for 10..19: cannot use `string(*)` in `const` declarations
| info: `string(*)`'s refer to strings that do not have a fixed size known at compile-time
