compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_error_prop.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const k := 20 + false\nconst l : int := k   % Nothing reported here\n"

---
"k"@(FileId(1), 6..7) [Declared]: ref <error>
"l"@(FileId(1), 28..29) [Declared]: ref int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 14..15: mismatched types for addition
| note in file FileId(1) for 11..13: this is of type `{integer}`
| note in file FileId(1) for 16..21: this is of type `boolean`
| error in file FileId(1) for 14..15: `{integer}` cannot be added to `boolean`
| info: operands must both be numbers, strings, or sets
