compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_incompatible.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const k : char := 20"

---
"k"@(FileId(1), 6..7) [Declared]: ref char
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 18..20: mismatched types
| note in file FileId(1) for 18..20: this is of type `{integer}`
| note in file FileId(1) for 10..14: this is of type `char`
| info: `{integer}` is not assignable into `char`
