compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_double_constrained.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const c : 1 .. 2 := 1\ntype _ : c .. c"

---
"c"@(FileId(1), 6..7) [Declared]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"_"@(FileId(1), 27..28) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of range of `int` (Unevaluated(LibraryId(0), BodyId(3)) .. Expr(Unevaluated(LibraryId(0), BodyId(4)), No))
"<root>"@(dummy) [Declared]: <error>

