compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_from_chars.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type c : 'a' .. 'c'"

---
"c"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of range of `char` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1))))
"<root>"@(dummy) [Declared]: <error>

