compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_from_enums.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type e : enum(uwu, owo)\ntype c : e.uwu .. e.owo"

---
"uwu"@(FileId(1), 14..17) [Declared]: enum[DefId(LibraryId(0), LocalDefId(2))] ( "uwu"@(FileId(1), 14..17), "owo"@(FileId(1), 19..22), )
"owo"@(FileId(1), 19..22) [Declared]: enum[DefId(LibraryId(0), LocalDefId(2))] ( "uwu"@(FileId(1), 14..17), "owo"@(FileId(1), 19..22), )
"e"@(FileId(1), 9..23) [Declared]: <error>
"e"@(FileId(1), 5..6) [Resolved(Type)]: enum[DefId(LibraryId(0), LocalDefId(2))] ( "uwu"@(FileId(1), 14..17), "owo"@(FileId(1), 19..22), )
"c"@(FileId(1), 29..30) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(4))] of range of `enum[DefId(LibraryId(0), LocalDefId(2))] ( "uwu"@(FileId(1), 14..17), "owo"@(FileId(1), 19..22), )` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1))))
"<root>"@(dummy) [Declared]: <error>

