compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_in_err_msg.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : 1 .. 2 := 'c'"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 18..21: mismatched types
| note in file FileId(1) for 18..21: this is of type `char`
| note in file FileId(1) for 8..14: this is of type `1 .. 2`
| info: `char` is not assignable into `1 .. 2`
