compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_in_err_msg_dyn_start.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var v : int const _ : v .. 2 := 'c'"
---
"v"@(FileId(1), 4..5) [Declared]: int
"_"@(FileId(1), 18..19) [Declared]: range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 22..23: cannot compute `v` at compile-time
| error in file FileId(1) for 22..23: `v` is a reference to a variable, not a constant
| note in file FileId(1) for 4..5: `v` declared here
error in file FileId(1) at 32..35: mismatched types
| note in file FileId(1) for 32..35: this is of type `char`
| note in file FileId(1) for 22..28: this is of type `{dynamic} .. 2`
| info: `char` is not assignable into `{dynamic} .. 2`
